--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.11.3",
     "pinia": "^2.1.7",
+    "primevue": "^3.46.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -25,6 +27,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
+    "sass": "^1.69.7",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
     "vue-tsc": "^1.8.19"
