moved api url to env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+# App
 VITE_APP_NAME="PasMAs"
 VITE_APP_VERSION=0.1.0
 
 # Bootstrap icon class
 VITE_APP_ICON="bi-feather"
+
+# APIs
+VITE_API_URL="http://localhost:8080/api"
