--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
       "target": "esnext",
       "module": "esnext",
+      "noImplicitAny": true,
       "strict": true,
       "lib": [
         "esnext"
