--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
+    "luxon": "^3.4.4",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
     "primevue": "^3.46.0",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.7.2",
     "@tsconfig/node18": "^18.2.2",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.11.10",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/eslint-config-typescript": "^12.0.0",
