--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,13 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "target": "ESNext",
+    "module": "ESNext",
+    "noImplicitAny": true,
+    "strict": true,
+    "lib": [
+      "ESNext"
+    ]
   }
 }
