--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
+    "extended-eventsource": "^1.4.9",
     "luxon": "^3.4.4",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
