--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ VITE_APP_ICON="bi-feather"
 # APIs
 VITE_API_URL="http://localhost:8080/api"
 VITE_STREAM_API_URL="http://localhost:8080/realtime"
+
+# Path to SSL certificates (Optional)
+NGINX_CERTIFICATE=
+NGINX_CERTIFICATE_KEY=
